# rusty-tally

./: Cargo.toml
src/ofx-parser/: Cargo.toml
src/ofx-parser/src/: adapters.rs  lib.rs
src/ofx-parser/src/adapters/: models.rs  ofx_parser.rs
src/ofx-parser/src/adapters/models/: ofx_document_xml.rs
src/ofx-parser/src/domain/: entities.rs
src/ofx-parser/src/domain/entities/: ofx.rs
src/tui/: Cargo.toml
src/tui/src/: main.rs
